--- a/react-storybook/package.json
+++ b/react-storybook/package.json
@@ -6,6 +6,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -58,6 +59,7 @@
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.6",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
